# DocAgent

./: .env.example  .gitignore  DocAgent_任务书.md  README.md  pyproject.toml  requirements.txt
docagent/: __init__.py  cli.py  config.py  graph.py  ingest.py  main.py  models.py  nodes.py  resume.py  state.py  vectorstore.py
docs/: demo.md
examples/: mini_knowledge_base.md
scripts/: benchmark.py
tests/: test_cli.py  test_config.py  test_graph.py  test_ingest.py  test_main.py  test_nodes.py  test_prompts.py  test_resume.py
